feat(domain): implement core ERP domain models and value objects
- Add domain building blocks: AggregateRoot, Entity, and Repository interfaces.
- Implement core entities: Order, Product, and CustomerInfo.
- Implement reusable Value Objects: Money and Quantity.
- Add comprehensive unit test suites for all core domain components.