@@ -13,6 +13,7 @@ import lombok.NoArgsConstructor;
 
 import java.time.Instant;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.Currency;
 import java.util.List;
 
@@ -59,8 +60,9 @@ public class Order extends AggregateRoot<OrderId> {
 
         OrderId id = OrderId.generate();
         AuditInfo audit = AuditInfo.create(createdBy, Instant.now());
-        Order order = new Order(id, orderNumber, customer, OrderStatus.pending(), items, null, audit);
-        order.calculateTotal();
+        Money totalAmount = calculateTotal(items);  // calcular primero
+
+        Order order = new Order(id, orderNumber, customer, OrderStatus.pending(), items, totalAmount, audit);
         order.registerEvent(new OrderCreated(
                 id, customer.customerId(), customer.customerName(), order.totalAmount, audit.createdAt()));
         return order;
@@ -77,7 +79,7 @@ public class Order extends AggregateRoot<OrderId> {
     }
 
     public void ship() {
-        OrderStatus nextStatus = OrderStatus.confirmed();
+        OrderStatus nextStatus = OrderStatus.shipped();
         validateTransition(nextStatus);
 
         this.status = nextStatus;
@@ -87,7 +89,7 @@ public class Order extends AggregateRoot<OrderId> {
     }
 
     public void deliver() {
-        OrderStatus nextStatus = OrderStatus.confirmed();
+        OrderStatus nextStatus = OrderStatus.delivered();
         validateTransition(nextStatus);
 
         this.status = nextStatus;
@@ -99,50 +101,67 @@ public class Order extends AggregateRoot<OrderId> {
     public void cancel(String reason) {
 
         if (reason == null || reason.isBlank()) {
-            throw new IllegalArgumentException("Cancellation reason cannot be blank");
+            throw new IllegalArgumentException("Cancellation reason cannot be null or blank");
         }
+
         OrderStatus nextStatus = OrderStatus.cancelled();
         validateTransition(nextStatus);
 
         this.status = nextStatus;
-        this.auditInfo = auditInfo.updateTimestamp();
+        this.auditInfo = this.auditInfo.updateTimestamp();
 
-        registerEvent(new OrderCancelled(id, reason, auditInfo.updatedAt()));
+        registerEvent(new OrderCancelled(this.id, reason, Instant.now()));
     }
 
     public void addItem(OrderItem item) {
-        if (item == null) throw new IllegalArgumentException("Item cannot be null");
-        if (this.status.isPending()) {
-            throw new IllegalStateException("Cannot add items to a " + status.value() + " order");
+        if (!this.status.isPending()) {
+            throw new IllegalStateException("Cannot add items to order in status: " + this.status.value());
         }
+        if (item == null) {
+            throw new IllegalArgumentException("Order item cannot be null");
+        }
+
         validateCurrencyConsistency(item.getUnitPrice().currency());
         this.items.add(item);
-        calculateTotal();
+        this.totalAmount = calculateTotal(this.items);
         this.auditInfo = auditInfo.updateTimestamp();
     }
 
     public void removeItem(OrderItem item) {
-        if (this.status.isPending()) {
-            throw new IllegalStateException("Cannot remove items to a " + status.value() + " order");
+        if (!this.status.isPending()) {
+            throw new IllegalStateException("Cannot remove items from order in status: " + this.status.value());
         }
-
-        if (!items.remove(item)) {
-            throw new IllegalArgumentException("Item not found in this order");
+        if (item == null) {
+            throw new IllegalArgumentException("Order item cannot be null");
         }
-        if (items.isEmpty()) {
+        if (!this.items.remove(item)) {
+            throw new IllegalArgumentException("Item not found in order");
+        }
+        if (this.items.isEmpty()) {
             throw new IllegalStateException("Order must have at least one item");
         }
-        calculateTotal();
-        this.auditInfo = auditInfo.updateTimestamp();
+
+        this.totalAmount = calculateTotal(this.items);
+        this.auditInfo = this.auditInfo.updateTimestamp();
     }
 
-    public void  calculateTotal() {
+    public List<OrderItem> getItems() {
+        return Collections.unmodifiableList(items);
+    }
+
+
+    private static Money calculateTotal(List<OrderItem> items) {
         //validateItems();
-        Currency currency = items.getFirst().getUnitPrice().currency();
-        this.totalAmount = items.stream()
-                .peek(item -> validateCurrencyConsistency(item.getUnitPrice().currency(), currency))
-                .map(OrderItem::getSubtotal)
-                .reduce(Money.of(0.0, currency), Money::add);
+        if (items.isEmpty()) {
+            throw new IllegalArgumentException("Cannot calculate total for empty order");
+        }
+
+        Money total = items.get(0).getSubtotal();
+        for (int i = 1; i < items.size(); i++) {
+            total = total.add(items.get(i).getSubtotal());
+        }
+
+        return total;
     }
 
     private static  void validateItems(List<OrderItem> items) {
